# pet-aqa

./: .env.example  .gitlab-ci.yml  Dockerfile  README.md  ci.env  docker-compose.yml  pyproject.toml  requirements.txt
config/: allure_config.py  logging_config.py  settings.py
core/: __init__.py  protocols.py
infrastructure/: __init__.py
infrastructure/kafka/: __init__.py  consumer.py  producer.py  serializers.py
infrastructure/postgresql/: connection_pool.py  models.py  repository.py
infrastructure/postgresql/migrations/: 001_initial.sql
plugins/: allure_plugin.py  logging_plugin.py
src/: __init__.py
src/api/: __init__.py  client.py  endpoints.py
src/api/models/: order.py  pet.py
src/mobile/: driver_factory.py
src/mobile/screens/: base_screen.py  home_screen.py  login_screen.py
src/steps/: api_steps.py  infra_steps.py  mobile_steps.py  web_steps.py
src/web/: browser_factory.py
src/web/pages/: base_page.py  cart_page.py  inventory_page.py  login_page.py
tests/: conftest.py
tests/api/: conftest.py  test_api_client.py  test_pet_lifecycle.py
tests/mobile/: conftest.py  test_login_mobile.py
tests/web/: conftest.py  test_checkout_flow.py
